@@ -6,6 +6,7 @@ Changes in 3.1.4
        (default: no), FR #94
 * UPD: afpd: FCE version 2 with new event types and new config options
        "fce ignore names" and "fce notify script"
+* UPD: afpd: check for modified included config file, FR #95.
 
 Changes in 3.1.3
 ================
